# garminmaps

./: .gitignore  DOCS.md  LICENSE  README.md  activities.py  credentials.env  example.py  main.py  pyproject.toml  requirements.txt  setup.sh
backend/: activities.py  main.py  utils.py
frontend/: index.html
garminmaps/: __init__.py  activities.py  garmin.py  mapping.py  utils.py
graphs/: gpx-file.gpx  index.html
src/: garmin.py
tests/: example.py
utils/: activities.py  graphing.py  utils.py
