[project]
name = "garminmaps"
version = "0.0.1"
authors = [
  { name="Nic Doorlay", email="ndoorlay@gmail.com" },
]
description = "SDK for generating interactive leaflet.js maps from Garmin data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/doorlay/garminmaps"
Issues = "https://github.com/doorlay/garminmaps/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"